--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,2 +1,3 @@
-<link rel="icon" type="image/svg+xml" sizes="512x512" href="{% link /assets/images/icon-512x512.svg %}">
-<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% link /assets/images/icon-180x180.png %}">
+<link rel="manifest" href="{% link site.webmanifest %}">
+<link rel="icon" type="image/svg+xml" sizes="512x512" href="{% link assets/images/icon-512x512.svg %}">
+<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% link assets/images/icon-180x180.png %}">
