--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -25,4 +25,11 @@
     <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i>
     <span>LinkedIn</span>
   </a>
+  <a
+    href="https://getpocket.com/edit?url={{ share_encoded_url }}"
+    title="{{ share_label }} Pocket"
+    class="btn btn--pocket">
+    <i class="fab fa-fw fa-get-pocket" aria-hidden="true"></i>
+    <span>Pocket</span>
+  </a>
 </section>
