Add Hatena Bookmark share button

--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -32,4 +32,11 @@
     <i class="fab fa-fw fa-get-pocket" aria-hidden="true"></i>
     <span>Pocket</span>
   </a>
+  <a
+    href="https://b.hatena.ne.jp/entry/{{ share_encoded_url }}"
+    title="{{ share_label }} Hatena Bookmark"
+    class="btn btn--hatena-bookmark">
+    <i class="fab fa-fw fa-hatena-bookmark" aria-hidden="true"></i>
+    <span>Hatena</span>
+  </a>
 </section>
