--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,28 +1,3 @@
-// Font Awesome icons
-.fa-hatena-bookmark {
-  &:before {
-      font-family: Verdana, sans-serif;
-      font-weight: bold;
-      content: "B!";
-  }
-}
-
-// Brand buttons
-@each $brand, $color in (
-  (pocket, $pocket-color),
-  (hatena-bookmark, $hatena-bookmark-color),
-) {
-  .btn--#{$brand} {
-    @include yiq-contrasted($color);
-    &:visited {
-      @include yiq-contrasted($color);
-    }
-    &:hover {
-      @include yiq-contrasted(mix(#000, $color, 20%));
-    }
-  }
-}
-
 // Layout options
 .no-sidebar {
   .sidebar {
@@ -35,5 +10,30 @@
     @include breakpoint($x-large) {
       width: 100%;
     }
+  }
+}
+
+// Buttons
+@each $name, $color in (
+  (pocket, $pocket-color),
+  (hatena-bookmark, $hatena-bookmark-color),
+) {
+  .btn--#{$name} {
+    @include yiq-contrasted($color);
+    &:visited {
+      @include yiq-contrasted($color);
+    }
+    &:hover {
+      @include yiq-contrasted(mix(#000, $color, 20%));
+    }
+  }
+}
+
+// Font Awesome
+.fa-hatena-bookmark {
+  &:before {
+      font-family: Verdana, sans-serif;
+      font-weight: bold;
+      content: "B!";
   }
 }
