--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,3 +1,10 @@
+// Fonts
+$sans-serif: -apple-system, BlinkMacSystemFont, Helvetica Neue, Arial, Roboto, Hiragino Kaku Gothic ProN, Meiryo, sans-serif;
+$monospace: Monaco, Consolas, monospace;
+$global-font-family: $sans-serif;
+$header-font-family: $sans-serif;
+$caption-font-family: $sans-serif;
+
 // Brands
 $pocket-color: #ee4055;
 $hatena-bookmark-color: #00a4de;
