--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,6 +4,10 @@ $monospace: Monaco, Consolas, monospace;
 $global-font-family: $sans-serif;
 $header-font-family: $sans-serif;
 $caption-font-family: $sans-serif;
+$base-font-size-small: 16px;
+$base-font-size-medium: 18px;
+$base-font-size-large: 20px;
+$base-font-size-x-large: 20px;
 
 // Brands
 $pocket-color: #ee4055;
