--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,13 @@
 // Fonts
-$sans-serif: -apple-system, BlinkMacSystemFont, Helvetica Neue, Arial, Roboto, Hiragino Kaku Gothic ProN, Meiryo, sans-serif;
+$sans-serif:
+  -apple-system,
+  BlinkMacSystemFont,
+  Helvetica Neue,
+  Arial,
+  Roboto,
+  Hiragino Kaku Gothic ProN,
+  Meiryo,
+  sans-serif;
 $monospace: Monaco, Consolas, monospace;
 $global-font-family: $sans-serif;
 $header-font-family: $sans-serif;
