Customize font size for page hero caption

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -27,6 +27,11 @@ html {
   }
 }
 
+// Page
+.page__hero-caption {
+  font-size: $type-size-8;
+}
+
 // Buttons
 @each $name, $color in (
   (pocket, $pocket-color),
