Update custom head

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,2 +1,2 @@
 <link rel="manifest" href="{% link site.webmanifest %}">
-<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% link assets/images/icon-180x180.png %}">
+<link rel="apple-touch-icon" href="{% link assets/images/icon-180x180.png %}">
