Hide updated date

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -31,6 +31,9 @@ html {
 .page__hero-caption {
   font-size: $type-size-8;
 }
+.page__date {
+  display: none;
+}
 
 // Buttons
 @each $name, $color in (
