Hide teaser for search result

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -27,6 +27,13 @@ html {
   }
 }
 
+// Search
+.search-content {
+  .archive__item-teaser {
+    display: none;
+  }
+}
+
 // Page
 .page__hero-caption {
   font-size: $type-size-8;
