--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,25 +1,34 @@
 <section class="page__share">
-  <h4 class="page__share-title">{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }}</h4>
-  {% assign share_absolute_url = page.url | absolute_url %}
-  {% assign share_encoded_url = share_absolute_url | url_encode %}
-  {% assign share_encoded_message = page.title | append: " " | append: share_absolute_url | url_encode %}
-  <a href="https://twitter.com/intent/tweet?text={{ share_encoded_message }}" class="btn btn--twitter">
+  <h4 class="page__share-title">{{ site.data.ui-text[site.locale].share_on_label | default: "Share on" }}</h4>
+  {% assign social_share_url = page.url | absolute_url | url_encode %}
+  {% assign social_share_title = page.title | markdownify | strip_html | strip_newlines | url_encode %}
+  <a
+    href="https://twitter.com/intent/tweet?url={{ social_share_url }}&amp;text={{ social_share_title }}"
+    class="btn btn--twitter">
     <i class="fab fa-fw fa-twitter" aria-hidden="true"></i>
     <span>Twitter</span>
   </a>
-  <a href="https://www.facebook.com/sharer/sharer.php?u={{ share_encoded_url }}" class="btn btn--facebook">
+  <a
+    href="https://www.facebook.com/sharer/sharer.php?u={{ social_share_url }}"
+    class="btn btn--facebook">
     <i class="fab fa-fw fa-facebook" aria-hidden="true"></i>
     <span>Facebook</span>
   </a>
-  <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ share_encoded_url }}" class="btn btn--linkedin">
+  <a
+    href="https://www.linkedin.com/sharing/share-offsite?url={{ social_share_url }}"
+    class="btn btn--linkedin">
     <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i>
     <span>LinkedIn</span>
   </a>
-  <a href="https://getpocket.com/edit?url={{ share_encoded_url }}" class="btn btn--pocket">
+  <a
+    href="https://getpocket.com/save?url={{ social_share_url }}"
+    class="btn btn--pocket">
     <i class="fab fa-fw fa-get-pocket" aria-hidden="true"></i>
     <span>Pocket</span>
   </a>
-  <a href="https://b.hatena.ne.jp/entry/{{ share_encoded_url }}" class="btn btn--hatena-bookmark">
+  <a
+    href="https://b.hatena.ne.jp/entry/{{ social_share_url }}"
+    class="btn btn--hatena-bookmark">
     <i class="fab fa-fw fa-hatena-bookmark" aria-hidden="true"></i>
     <span>Hatena</span>
   </a>
