Sort HTML and CSS attrs

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,2 +1,2 @@
-<link rel="manifest" href="{% link site.webmanifest %}">
-<link rel="apple-touch-icon" href="{% link assets/images/icon-180x180.png %}">
+<link href="{% link site.webmanifest %}" rel="manifest">
+<link href="{% link assets/images/icon-180x180.png %}" rel="apple-touch-icon">
