--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -95,6 +95,21 @@ html {
     }
   }
 }
+.grid-max-cols-3 {
+  .grid__item {
+    @include breakpoint($medium) {
+      width: span(4 of 12);
+      &:nth-child(3n + 1) {
+        clear: both;
+        margin-left: 0;
+      }
+      &:nth-child(3n + 2), &:nth-child(3n + 3) {
+        clear: none;
+        margin-left: gutter(1 of 12);
+      }
+    }
+  }
+}
 .no-footer-meta {
   footer.page__meta {
     display: none;
