Remove useless span elements

--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -5,31 +5,26 @@
   <a
     class="btn btn--twitter"
     href="https://twitter.com/intent/tweet?url={{ social_share_url }}&amp;text={{ social_share_title }}">
-    <i aria-hidden="true" class="fab fa-fw fa-twitter"></i>
-    <span>Twitter</span>
+    <i aria-hidden="true" class="fab fa-fw fa-twitter"></i> Twitter
   </a>
   <a
     class="btn btn--facebook"
     href="https://www.facebook.com/sharer/sharer.php?u={{ social_share_url }}">
-    <i aria-hidden="true" class="fab fa-fw fa-facebook"></i>
-    <span>Facebook</span>
+    <i aria-hidden="true" class="fab fa-fw fa-facebook"></i> Facebook
   </a>
   <a
     class="btn btn--linkedin"
     href="https://www.linkedin.com/sharing/share-offsite?url={{ social_share_url }}">
-    <i aria-hidden="true" class="fab fa-fw fa-linkedin"></i>
-    <span>LinkedIn</span>
+    <i aria-hidden="true" class="fab fa-fw fa-linkedin"></i> LinkedIn
   </a>
   <a
     class="btn btn--pocket"
     href="https://getpocket.com/save?url={{ social_share_url }}">
-    <i aria-hidden="true" class="fab fa-fw fa-get-pocket"></i>
-    <span>Pocket</span>
+    <i aria-hidden="true" class="fab fa-fw fa-get-pocket"></i> Pocket
   </a>
   <a
     class="btn btn--hatena-bookmark"
     href="https://b.hatena.ne.jp/entry/{{ social_share_url }}">
-    <i aria-hidden="true" class="fab fa-fw fa-hatena-bookmark"></i>
-    <span>Hatena</span>
+    <i aria-hidden="true" class="fab fa-fw fa-hatena-bookmark"></i> Hatena
   </a>
 </section>
