Fix feature row margin

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -27,6 +27,7 @@ html {
   }
 }
 .feature__wrapper {
+  margin-bottom: 1em;
   .feature__item--left,
   .feature__item--right {
     .archive__item-title {
