Fix a bug that the background color of the navigation is off by 1 point in Chrome

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -12,6 +12,11 @@ html {
   }
 }
 
+// Navigation
+.greedy-nav {
+  background-color: transparent;
+}
+
 // Archive
 .grid__item {
   .archive__item-teaser {
