Fix fa-hatena-bookmark style

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -80,8 +80,8 @@ html {
 
 // Font Awesome
 .fa-hatena-bookmark {
+  --fa: "B!";
   &:before {
-    content: "B!";
     font-family: Verdana, sans-serif;
     font-weight: bold;
   }
